2007-04-16    <Daddy@C-3PO>

	* lib/WWW/Search/Yahoo/Japan/News.pm (parse_tree): fixed for new page format

	* lib/WWW/Search/Yahoo/China.pm (parse_details): fixed for new page format

	* lib/WWW/Search/Yahoo.pm (parse_details): new sub-class-able method

2007-04-14    <Daddy@C-3PO>

	* lib/WWW/Search/Yahoo/News/Advanced.pm (parse_tree): fixed for new page format

2007-04-01    <Daddy@C-3PO>

	* lib/WWW/Search/Yahoo/China.pm (_result_list_tags): fix for new results page format

2007-03-28    <Daddy@C-3PO>

	* lib/WWW/Search/Yahoo.pm (parse_tree): don't return Yahoo links

2006-05-01    <Daddy@C-3PO>

	* lib/WWW/Search/Yahoo/China.pm (_result_list_tags): FIX for returning yahoo links as results
	
	* lib/WWW/Search/Yahoo/DE.pm (_result_list_tags): FIX for returning yahoo links as results

	* lib/WWW/Search/Yahoo/News/Advanced.pm (parse_tree): FIX for parsing result count with commas

2006-04-30    <Daddy@C-3PO>

	* lib/WWW/Search/Yahoo.pm (_result_list_tags): new private method

2005-10-24    <Daddy@C-3PO>

	* lib/WWW/Search/Yahoo/China.pm: add pod about UTF-8

	* Yahoo.pm (parse_tree): fix next_url demangling

2005-07-02  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Yahoo.pm (parse_tree): fix for next-page url when query contains "http:"

2004-09-25  Kingpin  <mthurn@verizon.net>

	* t/japan-news.t: use Encode instead of Jcode

	* lib/WWW/Search/Yahoo/Japan/News.pm (parse_tree): fix parse_debug level for msgs

2004-09-24  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Yahoo.pm (parse_tree): fix 'http%3A' in URLs

2004-09-19  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Yahoo/DE.pm (_where_to_find_count): fix tag names
	(_string_has_count): fix pattern

2004-09-11  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Yahoo/DE.pm (_where_to_find_count): new private method

	* lib/WWW/Search/Yahoo.pm (_where_to_find_count): new private method

	* lib/WWW/Search/Yahoo/News/Advanced.pm (parse_tree): handle new HTML formatting
